--- a/Practica1/index.html
+++ b/Practica1/index.html
@@ -14,7 +14,7 @@
         ideal para quienes aman el aroma intenso del ajo dorado.</p>
     <hr>
     <h2>Ingredientes</h2>
-    <p><strong>1 kg</strong>de pollo troceado (prefi¿eriblemente muslos). 10 a 12 <br>
+    <p><strong>1 kg </strong>de pollo troceado (preferiblemente muslos). 10 a 12 <br>
          dientes de ajo. 150 ml de vino blanco de laurel.
          Aceite de oliva virgen extra,sal y pimienta negra al gusto.</p>
    
