--- a/Practica1/index.html
+++ b/Practica1/index.html
@@ -24,9 +24,9 @@
     <p>Salpimentar los trozos de pollo. En una sarén grande, añade un buen chorro
         de aceite de olvia y calienta a fuego medio alto. </p>
 <h3>2. Dorar los ajos</h3>
-<p>Añadir los dientes de ajo con su piel (solo da un pequeño golpe para que se abran).
+<p>Añadir los dientes de ajo <mark>con su piel</mark> (solo da un pequeño golpe para que se abran).
     Cuando estén dorados,retíralos y resérvalos para que no se quemen, ya que el ajo
-    quemado aporta un sabor amargo.</p>
+    quemado aporta un sabor <i><b>amargo</b></i></p>
 <h3>3. Cocción final</h3>
 <p>Dorar el pollo en el mismo aceite. Caundo este bien sellado, agregue d enuevo los ajos,
     la hoja de laurel y el vino blanco. Dejar reducir  a fuego lento hasta que la salsa espese.</p>
