--- a/Practica2A/Index.html
+++ b/Practica2A/Index.html
@@ -10,7 +10,9 @@
     <h2>Viajes a Europa</h2>
     <img src="https://www.w3schools.com/css/img_5terre.jpg" alt="Italia">
     <a href="pages/paqueteSuiza.html">Ver paquete completo</a>
-
+<h3>Suiza</h3>
+    <img src="img/suiza.jpg" alt="Imagen de Suiza">
+    <a href="pages/paqueteSuiza.html">Ver paquete completo</a>
 
 </body>
 </html>
